--- a/src/Makefile_Ecore_IMF.am
+++ b/src/Makefile_Ecore_IMF.am
@@ -101,3 +101,29 @@ modules_ecore_imf_xim_module_la_DEPENDENCIES = \
 modules_ecore_imf_xim_module_la_LDFLAGS = -module @EFL_LTMODULE_FLAGS@
 modules_ecore_imf_xim_module_la_LIBTOOLFLAGS = --tag=disable-static
 endif
+
+# Wayland
+if BUILD_ECORE_IMF_WAYLAND
+ecoreimfwaylandpkgdir = $(libdir)/ecore_imf/modules/wayland/$(MODULE_ARCH)
+ecoreimfwaylandpkg_LTLIBRARIES = modules/ecore_imf/wayland/module.la
+modules_ecore_imf_wayland_module_la_SOURCES = \
+modules/ecore_imf/wayland/wayland_module.c \
+modules/ecore_imf/wayland/wayland_imcontext.c \
+modules/ecore_imf/wayland/wayland_imcontext.h \
+modules/ecore_imf/wayland/text-client-protocol.h \
+modules/ecore_imf/wayland/text-protocol.c
+modules_ecore_imf_wayland_module_la_CPPFLAGS = -I$(top_builddir)/src/lib/efl \
+@ECORE_IMF_CFLAGS@ \
+@ECORE_EVAS_CFLAGS@ \
+@ECORE_WAYLAND_CFLAGS@
+modules_ecore_imf_wayland_module_la_LIBADD = \
+@USE_ECORE_IMF_LIBS@ \
+@USE_ECORE_EVAS_LIBS@ \
+@USE_ECORE_WAYLAND_LIBS@
+modules_ecore_imf_wayland_module_la_DEPENDENCIES = \
+@USE_ECORE_IMF_INTERNAL_LIBS@ \
+@USE_ECORE_EVAS_INTERNAL_LIBS@ \
+@USE_ECORE_WAYLAND_INTERNAL_LIBS@
+modules_ecore_imf_wayland_module_la_LDFLAGS = -module @EFL_LTMODULE_FLAGS@
+modules_ecore_imf_wayland_module_la_LIBTOOLFLAGS = --tag=disable-static
+endif
