eeze: handle its intall hook correctly.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -15,6 +15,8 @@ check_PROGRAMS =
 TESTS =
 EXTRA_DIST =
 
+EFL_INSTALL_DATA_HOOK=
+
 include Makefile_Efl.am
 
 include Makefile_Evil.am
@@ -101,8 +103,7 @@ clean-local:
 	find . -type f -name check-results.xml -delete
 
 install-data-hook:
-	echo $(DESTDIR)
-	echo $(libdir)
+	$(EFL_INSTALL_DATA_HOOK)
 	for i in $(lib_LTLIBRARIES); do \
 		export file=`basename $$i`; \
 		sed -e "s/-luuid//" $(DESTDIR)/${libdir}/$$file > $(DESTDIR)/${libdir}/$$file.tmp && mv $(DESTDIR)/${libdir}/$$file.tmp $(DESTDIR)/${libdir}/$$file; \
