--- a/src/Makefile_Ecore_Evas.am
+++ b/src/Makefile_Ecore_Evas.am
@@ -200,3 +200,19 @@ modules_ecore_evas_engines_win32_module_la_DEPENDENCIES = \
 modules_ecore_evas_engines_win32_module_la_LDFLAGS = -module @EFL_LTMODULE_FLAGS@
 modules_ecore_evas_engines_win32_module_la_LIBTOOLFLAGS = --tag=disable-static
 endif
+
+if BUILD_ECORE_EVAS_DRM
+DRMSOURCES = \
+modules/ecore_evas/engines/drm/ecore_evas_drm.c
+ecoreevasenginedrmpkgdir = $(libdir)/ecore_evas/engines/drm/$(MODULE_ARCH)
+ecoreevasenginedrmpkg_LTLIBRARIES = modules/ecore_evas/engines/drm/module.la
+modules_ecore_evas_engines_drm_module_la_SOURCES = $(DRMSOURCES)
+modules_ecore_evas_engines_drm_module_la_CPPFLAGS = -I$(top_builddir)/src/lib/efl \
+@ECORE_EVAS_CFLAGS@ \
+-I$(top_srcdir)/src/modules/evas/engines/drm
+modules_ecore_evas_engines_drm_module_la_LIBADD = @USE_ECORE_EVAS_LIBS@
+modules_ecore_evas_engines_drm_module_la_DEPENDENCIES = @USE_ECORE_EVAS_INTERNAL_LIBS@
+modules_ecore_evas_engines_drm_module_la_LDFLAGS = -module @EFL_LTMODULE_FLAGS@
+modules_ecore_evas_engines_drm_module_la_LIBTOOLFLAGS = --tag=disable-static
+endif
+
