evas: fix make distcheck
Follow font rename from DejaVuSans.eet to TestFont.eet in commit e7cd15.

Signed-off-by: Daniel Willmann <d.willmann@samsung.com>

--- a/src/Makefile_Evas.am
+++ b/src/Makefile_Evas.am
@@ -1674,4 +1674,4 @@ tests_evas_evas_suite_DEPENDENCIES = @USE_EVAS_INTERNAL_LIBS@
 endif
 
 EXTRA_DIST += \
-tests/evas/DejaVuSans.eet
+tests/evas/TestFont.eet
