--- a/src/Makefile_Evas.am
+++ b/src/Makefile_Evas.am
@@ -1456,7 +1456,6 @@ bin_evas_loaders_bmp_module_la_CPPFLAGS = -I$(top_builddir)/src/lib/efl \
 -I$(top_srcdir)/src/lib/evas/cserve2 \
 -I$(top_srcdir)/src/bin/evas \
 @EVAS_CFLAGS@
-
 bin_evas_loaders_bmp_module_la_LIBADD = @EVAS_LIBS@
 bin_evas_loaders_bmp_module_la_DEPENDENCIES = @EVAS_INTERNAL_LIBS@
 bin_evas_loaders_bmp_module_la_LDFLAGS = -module @EFL_LTMODULE_FLAGS@
@@ -1473,13 +1472,8 @@ bin_evas_loaders_eet_module_la_CPPFLAGS = -I$(top_builddir)/src/lib/efl \
 -I$(top_srcdir)/src/bin/evas \
 @EVAS_CFLAGS@ \
 @evas_image_loader_eet_cflags@
-bin_evas_loaders_eet_module_la_LIBADD = \
-@EVAS_LIBS@ \
-@USE_EET_LIBS@
-@evas_image_loader_eet_libs@
-bin_evas_loaders_eet_module_la_DEPENDENCIES = \
-@EVAS_INTERNAL_LIBS@ \
-@USE_EET_INTERNAL_LIBS@
+bin_evas_loaders_eet_module_la_LIBADD = @EVAS_LIBS@ @USE_EET_LIBS@ @evas_image_loader_eet_libs@
+bin_evas_loaders_eet_module_la_DEPENDENCIES = @EVAS_INTERNAL_LIBS@ @USE_EET_INTERNAL_LIBS@
 bin_evas_loaders_eet_module_la_LDFLAGS = -module @EFL_LTMODULE_FLAGS@
 bin_evas_loaders_eet_module_la_LIBTOOLFLAGS = --tag=disable-static
 endif
