--- a/legacy/evas_generic_loaders/pkgbuild/PKGBUILD.in
+++ b/legacy/evas_generic_loaders/pkgbuild/PKGBUILD.in
@@ -1,25 +1,20 @@
 # Maintainer: Enlightenment Developers <enlightenment-devel@enlightenment.org>
-pkgname=('evas_generic_loaders')
+pkgname=evas_generic_loaders
 pkgver=@VERSION@
 pkgrel=1
 pkgdesc="Evas external binary executable loaders - GIT development snapshot"
 arch=('i686' 'x86_64' 'arm')
 url="http://www.enlightenment.org"
 license=('GPL2')
-makedepends=()
-depends=('poppler' 'libraw' 'libspectre' 'librsvg' 'gstreamer0.10'
-         'gstreamer0.10-base' 'gstreamer0.10-good' 
-	 'gstreamer0.10-bad' 'gstreamer0.10-ugly' 'gstreamer0.10-ffmpeg')
-provides=("evas_generic_loaders=$pkgver" 'evas_generic_loaders-svn')
-conflicts=('evas_generic_loaders-svn')
-options=('strip' 'zipman' '!libtool' 'debug')
-buildflags="-O2 -g -fvisibility=hidden -fomit-frame-pointer"
+depends=('efl' 'poppler' 'libraw' 'libspectre' 'librsvg' 'gstreamer0.10-base-plugins'
+         'gstreamer0.10-good-plugins' 'gstreamer0.10-bad-plugins'
+         'gstreamer0.10-ugly-plugins' 'gstreamer0.10-ffmpeg')
+options=('!libtool' 'debug')
 build() {
-  export LDFLAGS=""
   cd "../.."
+  export CFLAGS="$CFLAGS -fvisibility=hidden -fomit-frame-pointer"
   make clean distclean
-  ./configure --prefix=/usr \
-  --disable-static
+  ./configure --prefix=/usr
   make
 }
 
@@ -30,12 +25,12 @@ build() {
 
 package() {
   cd "../.."
-  rm -rf $pkgdir/usr
   make -j1 DESTDIR="$pkgdir/" install
-  install -Dm644 README $pkgdir/usr/share/$pkgname/README
-  install -Dm644 NEWS $pkgdir/usr/share/$pkgname/NEWS
-  install -Dm644 ChangeLog $pkgdir/usr/share/$pkgname/ChangeLog
-  install -Dm644 AUTHORS $pkgdir/usr/share/$pkgname/AUTHORS
-  install -Dm644 COPYING $pkgdir/usr/share/licenses/$pkgname/COPYING
-  ln -s ../licenses/$pkgname/COPYING $pkgdir/usr/share/$pkgname/COPYING
+  install -Dm644 README "$pkgdir/usr/share/$pkgname/README"
+  install -Dm644 NEWS "$pkgdir/usr/share/$pkgname/NEWS"
+  install -Dm644 ChangeLog "$pkgdir/usr/share/$pkgname/ChangeLog"
+  install -Dm644 AUTHORS "$pkgdir/usr/share/$pkgname/AUTHORS"
+  install -d "$pkgdir/usr/share/licenses/$pkgname"
+  sed -n '1,/PARTICULAR PURPOSE/p' COPYING > "$pkgdir/usr/share/licenses/$pkgname/COPYING"
+  ln -s "../licenses/$pkgname/COPYING" "$pkgdir/usr/share/$pkgname/COPYING"
 }
