--- a/configure.ac
+++ b/configure.ac
@@ -709,6 +709,7 @@ AC_DEFINE_IF([EINA_STRINGSHARE_USAGE],
 EFL_PLATFORM_DEPEND([EINA], [all])
 
 EFL_ADD_LIBS([EINA], [-lm])
+EFL_ADD_LIBS([EINA], [-lrt])
 
 ## Options
 
