examples: Make make return an error if one of the examples fails compile
Signed-off-by: Daniel Willmann <d.willmann@samsung.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -88,7 +88,7 @@ DIST_SUBDIRS += $(EXAMPLES_SUBDIRS)
 examples: all-am
 	@for d in $(EXAMPLES_SUBDIRS); do \
 	   echo "Making examples in $$d"; \
-	   $(MAKE) $(AM_MAKEFLAGS) -C $$d examples; \
+	   $(MAKE) $(AM_MAKEFLAGS) -C $$d examples || exit 1; \
 	done
 
 install-examples:
