Revert "evil: Evils own libdl lib is also needed for the test programs."
This reverts commit 525c4cbecebb25f7b939c3a7e47957042862c4ee.

--- a/src/Makefile_Evil.am
+++ b/src/Makefile_Evil.am
@@ -152,11 +152,11 @@ bin_evil_evil_suite_SOURCES +=  bin/evil/memcpy_glibc_arm.S
 endif
 
 bin_evil_evil_suite_CPPFLAGS = -I$(top_builddir)/src/lib/efl @EVIL_CFLAGS@
-bin_evil_evil_suite_LDADD = @USE_EVIL_LIBS@ @DL_LIBS@ -lm lib/evil/libdl.la
+bin_evil_evil_suite_LDADD = @USE_EVIL_LIBS@ @DL_LIBS@ -lm
 bin_evil_evil_suite_DEPENDENCIES = @USE_EVIL_INTERNAL_LIBS@
 
 bin_evil_test_evil_SOURCES = bin/evil/test_evil.c
-bin_evil_test_evil_LDADD = @USE_EVIL_LIBS@ @DL_LIBS@ lib/evil/libdl.la
+bin_evil_test_evil_LDADD = @USE_EVIL_LIBS@ @DL_LIBS@
 bin_evil_test_evil_DEPENDENCIES = @USE_EVIL_INTERNAL_LIBS@
 
 endif
