edje: add threshold to draggable part.

--- a/src/examples/edje/Makefile.am
+++ b/src/examples/edje/Makefile.am
@@ -11,6 +11,7 @@ endif
 
 #put here all EDCs one needs to the examples
 EDCS = \
+edje-threshold.edc \
 animations2.edc \
 animations.edc \
 basic2.edc \
