--- a/eo2test/Makefile
+++ b/eo2test/Makefile
@@ -9,13 +9,13 @@ BENCH_OBJS  = eo2_simple.o eo_simple.o eo2-bench.o
 
 all: eo2-bench test
 
-eo.o: ../src/lib/eo/eo.c
+eo.o: ../src/lib/eo/eo.c ../src/lib/eo/Eo.h
 	$(CC) $(CFLAGS) -fPIC -c $(INCLUDE) $(CONFIG) $(EINA_CFLAGS) $< -o $@
 
-eo_ptr_indirection.o: ../src/lib/eo/eo_ptr_indirection.c
+eo_ptr_indirection.o: ../src/lib/eo/eo_ptr_indirection.c ../src/lib/eo/Eo.h
 	$(CC) $(CFLAGS) -fPIC -c $(INCLUDE) $(CONFIG) $(EINA_CFLAGS) $< -o $@
 
-eo_base_class.o: ../src/lib/eo/eo_base_class.c
+eo_base_class.o: ../src/lib/eo/eo_base_class.c ../src/lib/eo/Eo.h
 	$(CC) $(CFLAGS) -fPIC -c $(INCLUDE) $(CONFIG) $(EINA_CFLAGS) $< -o $@
 
 libeo2.so: $(SO_OBJS)
@@ -24,13 +24,13 @@ libeo2.so: $(SO_OBJS)
 .c.o:
 	$(CC) $(CFLAGS) -c $(INCLUDE) $(CONFIG) $(EINA_CFLAGS) $< -o $@
 
-eo2-bench: libeo2.so $(BENCH_OBJS)
+eo2-bench: libeo2.so $(BENCH_OBJS) ../src/lib/eo/Eo.h
 	$(CC) $(CFLAGS) $(INCLUDE) $(CONFIG) $(EINA_LIBS) -L. -leo2 $(BENCH_OBJS) -o $@
 
 .cc.o:
 	g++ -O2 -std=c++0x -c $(INCLUDE) $(CONFIG) $(EINA_CFLAGS) $< -o $@
 
-test: libeo2.so simplesignal.o
+test: libeo2.so simplesignal.o ../src/lib/eo/Eo.h
 	g++ -O2 -std=c++0x $(INCLUDE) $(CONFIG) $(EINA_LIBS) -L. -leo2 simplesignal.o -o $@
 
 clean:
