efl: add a macro for beta API support.

--- a/configure.ac
+++ b/configure.ac
@@ -27,6 +27,7 @@ efl_api="both"
 
 #### For the moment the Eo EFL API is not ready you need to explicitely optin.
 EFL_ENABLE_EO_API_SUPPORT
+EFL_ENABLE_BETA_API_SUPPORT
 
 AC_ARG_WITH([api],
    [AC_HELP_STRING([--with-api=@<:@eo/legacy/both@:>@], [Select the EFL API Model @<:@default=both@:>@])],
