--- a/src/Makefile_Eo.am
+++ b/src/Makefile_Eo.am
@@ -11,6 +11,7 @@ lib/eo/eo.c \
 lib/eo/eo_ptr_indirection.c \
 lib/eo/eo_ptr_indirection.h \
 lib/eo/eo_base_class.c \
+lib/eo/eo2_base_class.c \
 lib/eo/eo_private.h
 
 lib_eo_libeo_la_CPPFLAGS = -I$(top_builddir)/src/lib/efl @EO_CFLAGS@
