configure: fix build when disabling ecore_con and crypto.
configure command:
./configure --disable-ecore-con --disable-curl --with-glib=no --with-crypto=none

EFL_CRYPTO_DEPEND macro appends the crypto libraries to the ECORE_CON dependency list.
In case the ECORE_CON dependency list and the build_crypto are both empty
the resulting list will only contain " ", resulting in an error

configure: error: Package requirements ( ) were not met:

Signed-off-by: Adrian Negreanu <adrian.m.negreanu@intel.com>

--- a/configure.ac
+++ b/configure.ac
@@ -1974,7 +1974,9 @@ AC_DEFINE_IF([HAVE_ABSTRACT_SOCKETS],
 
 ### Checks for libraries
 EFL_PLATFORM_DEPEND([ECORE_CON], [all])
-EFL_CRYPTO_DEPEND([ECORE_CON])
+if test "$build_crypto" != "none" ; then
+   EFL_CRYPTO_DEPEND([ECORE_CON])
+fi
 EFL_INTERNAL_DEPEND_PKG([ECORE_CON], [eo])
 EFL_INTERNAL_DEPEND_PKG([ECORE_CON], [eet])
 EFL_INTERNAL_DEPEND_PKG([ECORE_CON], [eina])
